--- a/index.html
+++ b/index.html
@@ -11,31 +11,4 @@
         <h1 style="font-weight: bold; color: #ff69b4;">Momopedia</h1>
         <nav id="year-menu">
             <ul>
-                <li><a href="#" data-year="2016">2016</a></li>
-                <li><a href="#" data-year="2017">2017</a></li>
-                <li><a href="#" data-year="2018">2018</a></li>
-                <li><a href="#" data-year="2019">2019</a></li>
-                <li><a href="#" data-year="2020">2020</a></li>
-                <li><a href="#" data-year="2021">2021</a></li>
-                <li><a href="#" data-year="2022">2022</a></li>
-                <li><a href="#" data-year="2023">2023</a></li>
-                <li><a href="#" data-year="2024">2024</a></li>
-            </ul>
-        </nav>
-        <div id="month-menu"></div>
-        <input type="text" id="search" placeholder="Buscar...">
-    </header>
-
-    <main>
-        <section id="content">
-            <!-- Aquí se mostrarán los memes y videos -->
-        </section>
-    </main>
-
-    <footer>
-        <p>¡Gracias por visitarnos! Comparte para llegar a más gente y tener más apoyo. ❤️</p>
-    </footer>
-
-    <script src="js/scripts.js"></script>
-</body>
-</html>
+                <li><a href="#" data-year="2022">2022</
