--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             if (!monthData || monthData.length === 0) {
                 contentSection.innerHTML = `
                     <p>Estamos trabajando en eso.</p>
-                    <img src="constructor.jpg" alt="Constructores" width="400">
+                    <img src="js/constructor.jpg" alt="Constructores" width="400">
                     <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
                 `;
                 return;
