--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Este es el bloque que se muestra cuando no hay contenido multimedia -->
         <p>Estamos trabajando en eso.</p>
         <!-- Aquí es donde se coloca la imagen con la ruta correcta -->
-        <img src="js/constructor.jpg" alt="Constructores" width="400">
+        <img src="carga.jpg" alt="Constructores" width="400">
         <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
     </div>
 
