--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 contentSection.innerHTML = `
                     <p>Estamos trabajando en eso.</p>
                     <!-- Aquí es donde se coloca la imagen con la ruta correcta -->
-                    <img src="js/constructor.jpg" alt="Constructores" width="400">
+                    <img src="https://ttpapu.github.io/prueba0.1/carga.jpg" alt="Constructores" width="400">
                     <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
                 `;
                 return;
