--- a/index.html
+++ b/index.html
@@ -18,12 +18,169 @@
             margin-top: 20px;
             text-align: center;
         }
+
+        /* Reset general */
+        *,
+        *::before,
+        *::after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+
+        /* Animación Block Reveal */
+        .block-effect {
+            font-size: calc(8px + 6vw);
+            text-align: center;
+        }
+
+        .block-reveal {
+            --t: calc(var(--td) + var(--d));
+            color: transparent;
+            padding: 4px;
+            position: relative;
+            overflow: hidden;
+            animation: revealBlock 0s var(--t) forwards;
+        }
+
+        .block-reveal::after {
+            content: '';
+            width: 0%;
+            height: 100%;
+            padding-bottom: 4px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: var(--bc);
+            animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
+        }
+
+        @keyframes revealBlock {
+            100% {
+                color: #0f0f0f;
+            }
+        }
+
+        @keyframes revealingIn {
+            0% {
+                width: 0;
+            }
+            100% {
+                width: 100%;
+            }
+        }
+
+        @keyframes revealingOut {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(100%);
+            }
+        }
+
+        /* Estilos para el Botón */
+        .button_container {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 30%;
+            text-align: center;
+        }
+
+        .description, .link {
+            font-family: 'Amatic SC', cursive;
+            text-align: center;
+        }
+
+        .description {
+            font-size: 35px;
+        }
+
+        .btn {
+            border: none;
+            display: block;
+            text-align: center;
+            cursor: pointer;
+            text-transform: uppercase;
+            outline: none;
+            overflow: hidden;
+            position: relative;
+            color: #fff;
+            font-weight: 700;
+            font-size: 15px;
+            background-color: #222;
+            padding: 17px 60px;
+            margin: 0 auto;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+        }
+
+        .btn span {
+            position: relative;
+            z-index: 1;
+        }
+
+        .btn:after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 490%;
+            width: 140%;
+            background: #78c7d2;
+            transition: all .5s ease-in-out;
+            transform: translateX(-98%) translateY(-25%) rotate(45deg);
+        }
+
+        .btn:hover:after {
+            transform: translateX(-9%) translateY(-25%) rotate(45deg);
+        }
+
+        /* Estilos para el enlace del Instagram */
+        #svg-wrapper {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            width: 53px;
+            height: auto;
+            transition: width .1s;
+        }
+
+        #svg-wrapper:hover {
+            width: 56px;
+            transition: width .1s;
+        }
+
+        /* SVG hover y enlace */
+        .link {
+            font-size: 20px;
+            margin-top: 30px;
+        }
+
+        .link a {
+            color: #000;
+            font-size: 25px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1 style="font-weight: bold; color: #ff69b4;">Momopedia</h1>
-         <nav id="year-menu">
+        <nav id="year-menu">
             <ul>
                 <!-- Lista de años del 2016 al 2024 -->
                 <li><a href="#" data-year="2016" onclick="showMonths(2016)">2016</a></li>
@@ -38,6 +195,7 @@
             </ul>
         </nav>
     </header>
+
     <!-- Aquí se mostrarán los meses al seleccionar un año -->
     <div id="month-menu">
         <!-- Los meses se cargarán dinámicamente al hacer clic en un año -->
@@ -52,6 +210,25 @@
         <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
     </div>
 
+    <!-- Animación de "Block Reveal" -->
+    <h1 class="block-effect" style="--td: 1.2s">
+        <div class="block-reveal" style="--bc: #4040bf; --d: .1s">Block</div>
+        <div class="block-reveal" style="--bc: #bf4060; --d: .5s">Revealing Effect</div>
+    </h1>
+
+    <!-- Botón con hover effect -->
+    <div class="button_container">
+        <p class="description">A simple pure CSS hover effect</p>
+        <button class="btn"><span>Hover me!</span></button>
+    </div>
+
+    <!-- Icono de Instagram (SVG) que redirige al perfil -->
+    <a target="_blank" href="https://www.instagram.com/tuusuario" id="svg-wrapper">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 73 63" style="enable-background:new 0 0 73 63;">
+            <path id="Combined-Shape" class="st0" d="M72.9,56.2l-0.5,0.4c-0.5,0.4-1.1,0.8-1.6,1.2l-0.4,0.3L70,57.9c-0.3-0.2-0.7-0.3-1.2-0.3 c-1.6,0-3.9,1.2-6,2.3c-2.4,1.2-4.9,2.5-7.1,2.6c-1,0-1.5-0.4-1.8-0.7c-0.9-1.2,0.3-3.4,1.7-6c1.3-2.5,3-5.6,1.8-6.6 C57.3,49,57.1,49,56.8,49c-1.5,0-4.6,2-8,5.1c-1.1,1-2.2,2-3.2,3c-3,2.9-5.4,5.3-7.5,5.3c-0.5,0-1-0.2-1.2-0.5 C35.1,59.5,40.4,50,41,48.9c0.9-1.7,1.9-3.3,2.8-5c2.4-4.1,4.6-7.9,3.8-9.3c-0.1-0.2-0.2-0.3-0.5-0.3c-2.1,0-7.8,4.4-13,10.9 c-2.6,3.1-5,6.5-7.1,9.5c-3.5,5.1-5.3,7.5-6.9,7.5c-0.3,0-0.5,0-0.6-0.1c-0.2-0.1-0.3-0.2-0.4-0.3c-1.7-2.2,2.1-14.6,7.4-24.2 c2.5-5.1,5.6-9.8,8.3-14c3.4-5.4,7.1-11.6,5.2-11.3c-1.5,0.2-4.1,1.3-7.8,4.3c-5.1,4-11,10.6-15.6,17.5c-5.5,8-9.4,16.5-11.2,20.8 c-0.5,1.3-1,2.4-1.4,3.4c-1.6,3.7-2,4.6-2.9,4.6c-0.8,0-1-0.8-1.1-1.2c0-1,0.9-7.7,4.4-15.9C8,36.9,14.1,27.3,20.8,20 c6.7-7.5,14.9-13.9,22.1-17.1c3.5-1.6,6.9-2.6,9.3-2.6c1.2,0,2,0.2,2.5,0.7c0.3,0.3,0.4,0.6,0.4,1c0,2.4-3.2,6.3-7.6,11.7 c-3,3.7-6.4,7.9-9.4,12.3c-4.3,5.9-7.1,11.4-8.4,14.2c-2.1,4.4-2.7,6.8-2.7,7.5c1-0.3,3.6-3.1,5.6-5.3c2.3-2.5,4.9-5.3,7.8-7.8 c5.1-4.8,10.8-8.2,13.7-8.2c1.1,0,1.9,0.5,2.1,1.4c0.6,2.2-1.8,5.6-4.9,10c-1.1,1.5-2.2,3.1-3.3,4.8c-3.7,5.4-5.9,10.5-5.3,11.9 c0.1,0.2,0.2,0.2,0.2,0.2c0.1,0,0.2,0,0.3,0c1.4,0,3.8-2,6.2-3.9c0.9-0.7,1.8-1.5,2.7-2.2c2.4-1.9,5.8-4.2,8.1-4.2 c0.9,0,1.6,0.3,1.9,1c1.4,1.8-0.4,4.9-2.1,7.8c-1.2,2-2.5,4.4-2,5.3c0.1,0.1,0.2,0.3,0.6,0.4c0.2,0,0.3,0,0.5,0 c1.7,0,3.7-0.9,5.6-1.8c2-0.9,3.9-1.7,5.5-1.7c0.8,0,1.6,0.2,2.2,0.6L72.9,56.2z M18.2,43.5c-1.2,0-2.1-1-2.1-2.1 c0-1.2,0.9-2.1,2.1-2.1s2.1,1,2.1,2.1C20.3,42.6,19.3,43.5,18.2,43.5z"/>
+        </svg>
+    </a>
+    
     <script>
 const mediaData = {
     "2016": {
