--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             background-attachment: fixed;
         }
 
+        /* Animación del título */
+        @keyframes titleAnimation {
+            0% {
+                font-size: 50px;
+                opacity: 0;
+            }
+            100% {
+                font-size: 20px;
+                opacity: 1;
+            }
+        }
+
+        #title {
+            animation: titleAnimation 3s ease-in-out forwards;
+            margin-bottom: 20px;
+            font-weight: bold;
+            color: #ff69b4;
+        }
+
         /* Animación Block Reveal */
         .block-effect {
             font-size: calc(8px + 6vw);
@@ -175,11 +194,25 @@
             color: #000;
             font-size: 25px;
         }
+
+        /* Cambio de color en los enlaces del menú */
+        #year-menu ul li a {
+            text-decoration: none;
+            color: #000;
+            padding: 5px 10px;
+            display: block;
+        }
+
+        #year-menu ul li a:hover,
+        #year-menu ul li a.active {
+            color: #fff;
+            background-color: #000;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1 style="font-weight: bold; color: #ff69b4;">Momopedia</h1>
+        <h1 id="title">Momopedia</h1>
         <nav id="year-menu">
             <ul>
                 <!-- Lista de años del 2016 al 2024 -->
@@ -222,11 +255,7 @@
 
     <!-- Icono de Instagram (SVG) que redirige al perfil -->
     <a target="_blank" href="https://www.instagram.com/tuusuario" id="svg-wrapper">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 73 63" style="enable-background:new 0 0 73 63;">
-            <path id="Combined-Shape" class="st0" d="M72.9,56.2l-0.5,0.4c-0.5,0.4-1.1,0.8-1.6,1.2l-0.4,0.3L70,57.9c-0.3-0.2-0.5-0.4-0.7-0.7l-3.2-5 c-2.1-3.3-4.4-7-7.5-8.9c-1.2-0.8-2.7-1.4-4.1-1.8c-0.5-0.2-1.1-0.3-1.7-0.5c-0.5-0.2-1-0.2-1.6-0.3c-0.4-0.1-0.8-0.1-1.2-0.1 c-3.5,0-6.8,2.8-8.1,6.4c-0.5,1.1-1,2.3-1.4,3.5c-0.8,2.1-1.1,4.3-0.9,6.5c0.1,2.7,1.3,5.4,3.3,7.3c3,3.3,7.5,4.8,11.9,4.3 c1.2,0,2.4-0.1,3.5-0.5c1.6-0.5,3.2-1.4,4.6-2.5c0.8-0.6,1.7-1.3,2.5-2c0.9-0.9,1.8-1.9,2.5-3c1.8-2.6,2.7-5.7,3.4-8.7 c0.5-2.3,0.4-4.7-0.2-6.9c-0.7-2.3-2.1-4.5-4.4-6.2c-2.7-2.1-5.9-3.5-9.2-3.5c-1.3,0-2.5,0.1-3.8,0.4c-1.9,0.3-3.8,1-5.5,2 c-2.1,1.2-4,2.6-5.7,4.3c-0.3,0.3-0.6,0.6-0.9,1c-1.5,2.1-3.1,4.3-4.4,6.5c-1.2,2-2.3,3.9-3.4,5.9c-1.5,2.7-3.2,5.2-5,7.7 c-0.2,0.2-0.4,0.5-0.7,0.7c-2.3,2.4-5.6,3.9-9,3.9c-2.1,0-4.2-0.7-6-1.7c-1.2-0.6-2.3-1.5-3.4-2.4c-2.5-2.3-4.4-5.3-5.8-8.5 C14.6,15.5,21.5,9,30.5,9.5c6.2,0.3,11.2,5.2,12.2,11.2C43.4,23,43,25,42.1,27c-1.1,2-1.6,4.4-1.7,6.8 c-0.1,2.7,1.4,5.4,4.1,7.2c1.3,1.1,3,1.8,4.7,2.2c2,0.4,4,0.6,5.9,0.3c2.6-0.5,4.9-2.3,6.7-4.3c1.9-2.1,3.3-4.6,3.9-7.4 C73,30.5,72.8,27,72.9,23.5c0.1-2.5,0-5.1-0.5-7.4c-0.6-2.8-1.8-5.3-3.6-7.5z"/>
-        </svg>
-    </a>
-    
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="[_{{{CITATION{{{_1{](https://github.com/la9una/web/tree/ba1073ae044ebb7b538a3b13f0f9598f7c410bb6/docs%2Fbootstrap%2Falignci.md)[_{{{CITATION{{{_2{](https://github.com/tomfarrelly/myAgent-PP/tree/31dd137a231e873c50d84406ad4c19ad72f32f8e/resources%2Fviews%2Fabout.blade.php)[_{{{CITATION{{{_3{](https://github.com/urvishd/Mobile-Recharge-System-PHP/tree/0623108ff5ce19323d492583c981fe00e96685b8/home2.php)[_{{{CITATION{{{_4{](https://github.com/Hedisaker/apprendre-arab/tree/eaf571a3273c6f7fa0af0c9053a8c680ba9a7df6/resources%2Fviews%2Fkids%2Flettredetailex3.blade.php)[_{{{CITATION{{{_5{](https://github.com/thenam153/laravel-sale-phone/tree/eefa40dbc5ca56ff983c3b00707acba2caf7e5ec/resources%2Fviews%2Fuser%2Fmodules%2Fuser_info_md.blade.php)[_{{{CITATION{{{_6{](https://github.com/Weight-Lifting-10/frontend/tree/3150377862006aaee03724c341db25fb53b7377e/lifting%2Fsrc%2Fcomponents%2FLogin%2FloginForm.js)[_{{{CITATION{{{_7{](https://github.com/nathana24/Portfolio/tree/dd7c69cbfc184c4980c9733056db87435227b114/resources%2Fviews%2Fhome.blade.php)[_{{{CITATION{{{_8{](https://github.com/MarkJaysonNoguerra/imageclassifier/tree/7471605668afeb09a8caaf4fb20c1574d534efa4/docs%2Fmain-es5.5188e3bc3fdbc42188fe.js)[_{{{CITATION{{{_9{](https://github.com/HarshOza36/MovieReviewSystem/tree/c3a37376836cb0ae0b9e5dc187d90241faed22f1/wlcm.php)    
     <script>
 const mediaData = {
     "2016": {
