--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
     <title>Momopedia</title>
     <link rel="stylesheet" href="estilo.css">
     <style>
-        /* Estilos básicos para ocultar/mostrar los meses y videos */
-        #month-menu {
-            display: block;
-            margin-top: 20px;
-        }
-        #video-player {
-            margin-top: 20px;
-        }
-        #content {
-            margin-top: 20px;
-            text-align: center;
-        }
-
         /* Estilos generales */
         *,
         *::before,
@@ -35,64 +22,71 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
+            color: #333;
         }
 
-        /* Animación del título */
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            color: #ff69b4;
+            animation: titleAnimation 3s ease-in-out forwards;
+        }
+
         @keyframes titleAnimation {
             0% {
-                font-size: 80px;
+                font-size: 4rem;
                 opacity: 0;
             }
             100% {
-                font-size: 40px;
+                font-size: 2.5rem;
                 opacity: 1;
             }
         }
 
-        #title {
-            animation: titleAnimation 3s ease-in-out forwards;
-            font-weight: bold;
-            color: #ff69b4;
-            text-align: center;
-            margin-top: 50px;
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
         }
 
-        /* Estilos para el Botón */
-        .button_container {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 30%;
-            text-align: center;
+        nav ul li {
+            margin: 0 10px;
         }
 
-        .description, .link {
-            font-family: 'Amatic SC', cursive;
-            text-align: center;
-        }
-
-        .description {
-            font-size: 35px;
-        }
-
-        /* Hover effect en menú de años */
-        #year-menu ul li a {
+        nav ul li a {
             text-decoration: none;
             color: #000;
-            padding: 5px 10px;
-            display: block;
-            transition: color 0.3s, background-color 0.3s;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.7);
         }
 
-        #year-menu ul li a:hover,
-        #year-menu ul li a.active {
+        nav ul li a:hover,
+        nav ul li a.active {
+            background: #000;
             color: #fff;
-            background-color: #000;
+        }
+
+        #content {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        #content img {
+            max-width: 100%;
+            height: auto;
         }
 
         /* Estilos para el enlace del Instagram */
@@ -100,14 +94,12 @@
             position: fixed;
             bottom: 10px;
             right: 10px;
-            width: 53px;
-            height: auto;
-            transition: width .1s;
+            width: 50px;
+            transition: width 0.2s ease-in-out;
         }
 
         #svg-wrapper:hover {
-            width: 56px;
-            transition: width .1s;
+            width: 55px;
         }
 
         /* SVG hover y enlace */
@@ -124,7 +116,7 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Momopedia</h1>
+        <h1>Momopedia</h1>
         <nav id="year-menu">
             <ul>
                 <!-- Lista de años del 2016 al 2024 -->
@@ -162,7 +154,10 @@
                 c-1.8,2.5-4.3,4.5-7.2,5.7c-3,1.3-6.4,1.9-9.7,1.9s-6.7-0.6-9.7-1.9c-2.9-1.2-5.4-3.2-7.2-5.7c-1.8-2.5-3.1-5.5-3.9-8.8
                 C14,41,13.5,37.7,13.5,34.4c0-3.3,0.5-6.7,1.7-9.9c0.8-2.2,2-4.1,3.6-5.7c1.5-1.7,3.3-3,5.3-4c2.3-1.2,4.7-2,7.3-2.5
                 C32,12.4,34,12,36.5,12s4.5,0.4,6.7,1.1c2.6,0.6,5,1.7,7.2,3c2,1.2,3.7,2.9,5.1,4.9c1.4,2,2.4,4.3,3.1,6.7c0.7,2.3,1.1,4.7,1.1,7.2
-                c0,3.3-0.5,6.6-1.7,9.7C55.8[_{{{CITATION{{{_1{](https://github.com/la9una/web/tree/ba1073ae044ebb7b538a3b13f0f9598f7c410bb6/docs%2Fbootstrap%2Falignci.md)
+                c0,3.3-0.5,6.6-1.7,9.7C55.8,53.3,55.4,53.9,52.8,54.3z"/>
+        </svg>
+    </a>
+    
 <script>
 const mediaData = {
     "2016": {
