--- a/index.html
+++ b/index.html
@@ -6,117 +6,23 @@
     <title>Momopedia</title>
     <link rel="stylesheet" href="estilo.css">
     <style>
-        /* Estilos generales */
-        *,
-        *::before,
-        *::after {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            color: #333;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            color: #ff69b4;
-            animation: titleAnimation 3s ease-in-out forwards;
-        }
-
-        @keyframes titleAnimation {
-            0% {
-                font-size: 4rem;
-                opacity: 0;
-            }
-            100% {
-                font-size: 2.5rem;
-                opacity: 1;
-            }
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #000;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.7);
-        }
-
-        nav ul li a:hover,
-        nav ul li a.active {
-            background: #000;
-            color: #fff;
-        }
-
-        #content {
-            text-align: center;
+        /* Estilos básicos para ocultar/mostrar los meses y videos */
+        #month-menu {
+            display: block;
             margin-top: 20px;
         }
-
-        #content img {
-            max-width: 100%;
-            height: auto;
+        #video-player {
+            margin-top: 20px;
         }
-
-        /* Estilos para el enlace del Instagram */
-        #svg-wrapper {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            width: 50px;
-            transition: width 0.2s ease-in-out;
-        }
-
-        #svg-wrapper:hover {
-            width: 55px;
-        }
-
-        /* SVG hover y enlace */
-        .link {
-            font-size: 20px;
-            margin-top: 30px;
-        }
-
-        .link a {
-            color: #000;
-            font-size: 25px;
+        #content {
+            margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Momopedia</h1>
+        <h1 style="font-weight: bold; color: #ff69b4;">Momopedia</h1>
         <nav id="year-menu">
             <ul>
                 <!-- Lista de años del 2016 al 2024 -->
@@ -132,7 +38,6 @@
             </ul>
         </nav>
     </header>
-
     <!-- Aquí se mostrarán los meses al seleccionar un año -->
     <div id="month-menu">
         <!-- Los meses se cargarán dinámicamente al hacer clic en un año -->
@@ -140,24 +45,64 @@
 
     <!-- Aquí se mostrará el video cuando se seleccione un mes -->
     <div id="content">
+        <!-- Este es el bloque que se muestra cuando no hay contenido multimedia -->
         <p>Estamos trabajando en eso.</p>
+        <!-- Aquí es donde se coloca la imagen con la ruta correcta -->
         <img src="https://ttpapu.github.io/prueba0.1/carga.jpg" alt="Constructores" width="400">
         <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
     </div>
 
-    <!-- Icono de Instagram (SVG) que redirige al perfil -->
-    <a target="_blank" href="https://www.instagram.com/tuusuario" id="svg-wrapper">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 73 73" style="enable-background:new 0 0 73 73;">
-            <path class="st0" d="M36.5,0C16.3,0,0,16.3,0,36.5S16.3,73,36.5,73S73,56.7,73,36.5S56.7,0,36.5,0z M48.6,18.3h9.1
-                c0.6,0,1.1,0.5,1.1,1.1v9.1c0,0.6-0.5,1.1-1.1,1.1h-9.1c-0.6,0-1.1-0.5-1.1-1.1v-9.1C47.6,18.9,48,18.3,48.6,18.3z M36.5,23.4
-                c7.2,0,13.1,5.9,13.1,13.1S43.7,49.6,36.5,49.6S23.4,43.7,23.4,36.5S29.3,23.4,36.5,23.4z M52.8,54.3
-                c-1.8,2.5-4.3,4.5-7.2,5.7c-3,1.3-6.4,1.9-9.7,1.9s-6.7-0.6-9.7-1.9c-2.9-1.2-5.4-3.2-7.2-5.7c-1.8-2.5-3.1-5.5-3.9-8.8
-                C14,41,13.5,37.7,13.5,34.4c0-3.3,0.5-6.7,1.7-9.9c0.8-2.2,2-4.1,3.6-5.7c1.5-1.7,3.3-3,5.3-4c2.3-1.2,4.7-2,7.3-2.5
-                C32,12.4,34,12,36.5,12s4.5,0.4,6.7,1.1c2.6,0.6,5,1.7,7.2,3c2,1.2,3.7,2.9,5.1,4.9c1.4,2,2.4,4.3,3.1,6.7c0.7,2.3,1.1,4.7,1.1,7.2
-                c0,3.3-0.5,6.6-1.7,9.7C55.8,53.3,55.4,53.9,52.8,54.3z"/>
-        </svg>
-    </a>
-    
+    <script>
+const mediaData = {
+    "2016": {
+        "1": [
+            { type: "video", path: "memes/2016/enero/2016_enero.mp4" },
+            { type: "audio", path: "memes/2016/enero/audio.mp3" },
+            { type: "image", path: "memes/2016/enero/Multimedia.png" }
+        ],
+        "2": [
+            { type: "video", path: "memes/2016/febrero/2016_febrero.mp4" },
+            { type: "audio", path: "memes/2016/febrero/audio.mp3" },
+            { type: "image", path: "memes/2016/febrero/Multimedia.png" }
+        ],
+    },
+    // Más datos aquí...
+};
+
+function showMonths(year) {
+    const monthMenu = document.getElementById('month-menu');
+    monthMenu.innerHTML = ''; // Limpia el contenido anterior
+    const months = Object.keys(mediaData[year]);
+    months.forEach(month => {
+        const link = document.createElement('a');
+        link.href = '#';
+        link.textContent = `Mes ${month}`;
+        link.onclick = () => showMedia(year, month);
+        monthMenu.appendChild(link);
+    });
+}
+
+function showMedia(year, month) {
+    const content = document.getElementById('content');
+    content.innerHTML = ''; // Limpia el contenido anterior
+    const media = mediaData[year][month];
+    media.forEach(item => {
+        let element;
+        if (item.type === 'video') {
+            element = document.createElement('video');
+            element.src = item.path;
+            element.controls = true;
+        } else if (item.type === 'audio') {
+            element = document.createElement('audio');
+            element.src = item.path;
+            element.controls = true;
+        } else if (item.type === 'image') {
+            element = document.createElement('img');
+            element.src = item.path;
+        }
+        content.appendChild(element);
+    });
+}    
 <script>
 const mediaData = {
     "2016": {
