--- a/index.html
+++ b/index.html
@@ -6,26 +6,68 @@
     <title>Momopedia</title>
     <link rel="stylesheet" href="estilo.css">
     <style>
-        /* Estilos básicos para ocultar/mostrar los meses y videos */
-        #month-menu {
-            display: block;
-            margin-top: 20px;
-        }
-        #video-player {
-            margin-top: 20px;
-        }
-        #content {
-            margin-top: 20px;
+        /* Estilos básicos */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
             text-align: center;
+        }
+
+        header {
+            background-color: #ff69b4;
+            color: #fff;
+            padding: 10px 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            background-color: #ff85c3;
+        }
+
+        #month-menu, #content {
+            margin-top: 20px;
+        }
+
+        #content img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* Añadir animaciones */
+        .fade-in {
+            animation: fadeIn 2s;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1 style="font-weight: bold; color: #ff69b4;">Momopedia</h1>
+        <h1>Momopedia</h1>
         <nav id="year-menu">
             <ul>
-                <!-- Lista de años del 2016 al 2024 -->
+               <!-- Lista de años del 2016 al 2024 -->
                 <li><a href="#" data-year="2016" onclick="showMonths(2016)">2016</a></li>
                 <li><a href="#" data-year="2017" onclick="showMonths(2017)">2017</a></li>
                 <li><a href="#" data-year="2018" onclick="showMonths(2018)">2018</a></li>
@@ -39,19 +81,18 @@
         </nav>
     </header>
     <!-- Aquí se mostrarán los meses al seleccionar un año -->
-    <div id="month-menu">
-        <!-- Los meses se cargarán dinámicamente al hacer clic en un año -->
-    </div>
-
+    <div id="month-menu"></div>
     <!-- Aquí se mostrará el video cuando se seleccione un mes -->
-    <div id="content">
+    <div id="content" class="fade-in">
         <!-- Este es el bloque que se muestra cuando no hay contenido multimedia -->
         <p>Estamos trabajando en eso.</p>
-        <!-- Aquí es donde se coloca la imagen con la ruta correcta -->
-        <img src="https://ttpapu.github.io/prueba0.1/carga.jpg" alt="Constructores" width="400">
+        <img src="https://ttpapu.github.io/prueba0.1/carga.jpg" alt="Constructores">
         <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
     </div>
-        
+    <script>
+        function showMonths(year) {
+            // Aquí puedes añadir el código para mostrar los meses y videos
+            alert("Mostrar meses para el año " + year);
 <script>
 const mediaData = {
     "2016": {
