--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
             margin-top: 80px; /* Ajuste para que el contenido no quede oculto tras el header */
         }
 
+        #month-menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        #month-menu ul li {
+            margin: 10px;
+        }
+
+        #month-menu ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            background-color: #555;
+            transition: background-color 0.3s ease;
+        }
+
+        #month-menu ul li a:hover {
+            background-color: #777;
+        }
+
         #content img {
             max-width: 50%; /* Imagen más pequeña */
             height: auto;
@@ -121,7 +147,24 @@
         <img src="https://ttpapu.github.io/prueba0.1/carga.jpg" alt="Constructores">
         <p>Aún nos falta información por poner. Recuerda que todavía es una versión beta. ¡Gracias por visitarnos!</p>
     </div>
-<script>
+    <script>
+        function showMonths(year) {
+            const months = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
+            let monthMenu = document.getElementById('month-menu');
+            let ul = document.createElement('ul');
+            monthMenu.innerHTML = ''; // Limpiar cualquier contenido anterior
+            months.forEach(month => {
+                let li = document.createElement('li');
+                let a = document.createElement('a');
+                a.href = '#';
+                a.textContent = month;
+                a.onclick = function() {
+                    alert('Mostrar contenido para ' + month + ' de ' + year);
+                };
+                li.appendChild(a);
+                ul.appendChild(li);
+            });
+            monthMenu.appendChild(ul);
 const mediaData = {
     "2016": {
         "1": [
