--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             margin-top: 80px; /* Ajuste para que el contenido no quede oculto tras el header */
         }
 
+        #month-menu { 
+            margin-top: 40px; /* Añadir margen superior para separar de los años */ 
+        }
         #month-menu ul {
             list-style: none;
             padding: 0;
