--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 const mediaData = {
     "2016": {
         "1": [
-            { type: "video", path: "memes/2016/enero/2016_enero.mp4" },
+            { type: "video", path: "memes/2016/enero/2016_enero.webm" },
             { type: "audio", path: "memes/2016/enero/audio.mp3" },
             { type: "image", path: "memes/2016/enero/Multimedia.png" }
         ],
