--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ document.addEventListener("DOMContentLoaded", function () {
             if (file.type === "video") {
                 contentSection.innerHTML += `
                     <video width="400" controls>
-                        <source src="${file.path}" type="video/mp4">
+                        <source src="${file.path}" type="video/webm">
                         Tu navegador no soporta la etiqueta de video.
                     </video>
                 `;
