--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Video .webm</title>
 </head>
-<body>
-    <video controls>
-        <source src="memes/2016/enero/2016_enero.webm" type="video/webm">
-        Tu navegador no soporta el formato de video .webm.
-    </video>
+<body>  
+<video width="640" height="480" controls>
+  <source src="memes/2016/enero/2016_enero.webm" type="video/webm">
+  Tu navegador no soporta el formato WebM.
+</video>
 </body>
 </html>
