--- a/index.html
+++ b/index.html
@@ -4,7 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Videos</title>
-    <script src="scripts.js" defer></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const mediaData = {
+                "2016": {
+                    "12": [
+                        { type: "video", path: "memes/2016/diciembre/2016_diciembre.webm", format: "webm" },
+                    ],
+                    "1": [
+                        { type: "video", path: "memes/2016/enero/2016_enero.avi", format: "avi" },
+                    ],
+                    "2": [
+                        { type: "video", path: "memes/2016/febrero/2016_febrero.mkv", format: "mkv" },
+                    ],
+                    "5": [
+                        { type: "video", path: "memes/2016/mayo/2016_mayo.mov", format: "mov" },
+                    ],
+                    "3": [
+                        { type: "video", path: "memes/2019/marzo/2019_marzo.wmv", format: "wmv" },
+                    ]
+                }
+            };
+
+            function loadMedia() {
+                const contentSection = document.querySelector("body");
+
+                Object.keys(mediaData).forEach(year => {
+                    Object.keys(mediaData[year]).forEach(month => {
+                        mediaData[year][month].forEach(file => {
+                            if (file.type === "video") {
+                                let videoType;
+                                switch (file.format) {
+                                    case 'avi': videoType = 'video/x-msvideo'; break;
+                                    case 'mkv': videoType = 'video/x-matroska'; break;
+                                    case 'mov': videoType = 'video/quicktime'; break;
+                                    case 'wmv': videoType = 'video/x-ms-wmv'; break;
+                                    case 'webm': videoType = 'video/webm'; break;
+                                    default: videoType = 'video/mp4'; // defaulting to mp4
+                                }
+                                const videoElement = document.createElement("video");
+                                videoElement.width = 640;
+                                videoElement.height = 480;
+                                videoElement.controls = true;
+
+                                const sourceElement = document.createElement("source");
+                                sourceElement.src = file.path;
+                                sourceElement.type = videoType;
+
+                                videoElement.appendChild(sourceElement);
+                                contentSection.appendChild(videoElement);
+                            }
+                        });
+                    });
+                });
+            }
+
+            loadMedia();
+        });
+    </script>
 </head>
 <body>  
     <h1>Prueba de Videos en Diferentes Formatos</h1>
