--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
 const mediaData = {
     "2016": {
         "1": [
-            { type: "video", path: "memes/2016/enero/2016_enero.avi" },
-            { type: "video", path: "memes/2016/enero/2016_enero.webm" },
+            { type: "video", path: "memes/2016/2016_enero.avi" },
+            { type: "video", path: "memes/2016/2016_enero.webm" },
             { type: "audio", path: "memes/2016/enero/audio.mp3" },
             { type: "image", path: "memes/2016/enero/Multimedia.png" }
         ],
         "2": [
-            { type: "video", path: "memes/2016/febrero/2016_febrero.mkv" },
+            { type: "video", path: "memes/2016/2016_febrero.mkv" },
             { type: "audio", path: "memes/2016/febrero/audio.mp3" },
             { type: "image", path: "memes/2016/febrero/Multimedia.png" }
         ],
@@ -173,12 +173,12 @@ const mediaData = {
             { type: "image", path: "memes/2016/abril/Multimedia.png" }
         ],
         "5": [
-            { type: "video", path: "memes/2016/mayo/2016_mayo.mov" },
+            { type: "video", path: "memes/2016/2016_mayo.mov" },
             { type: "audio", path: "memes/2016/mayo/audio.mp3" },
             { type: "image", path: "memes/2016/mayo/Multimedia.png" }
         ],
         "6": [
-            { type: "video", path: "memes/2016/junio/2016_junio.mp4" },
+            { type: "video", path: "memes/2016/2016_junio.mp4" },
             { type: "audio", path: "memes/2016/junio/audio.mp3" },
             { type: "image", path: "memes/2016/junio/Multimedia.png" }
         ],
@@ -208,7 +208,7 @@ const mediaData = {
             { type: "image", path: "memes/2016/noviembre/Multimedia.png" }
         ],
         "12": [
-            { type: "video", path: "memes/2016/diciembre/2016_diciembre.webm" },
+            { type: "video", path: "memes/2016/2016_diciembre.webm" },
             { type: "audio", path: "memes/2016/diciembre/audio.mp3" },
             { type: "image", path: "memes/2016/diciembre/Multimedia.png" }
         ]
